# billiondollarcontract

./: .gitignore  Anchor.toml  package-lock.json  package.json  tsconfig.json
docs/plans/: 2026-01-11-parcel-info-land-buy-rewards-design.md
programs/billion/: Cargo.toml
programs/billion/src/: errors.rs  lib.rs  utils.rs
programs/billion/src/instructions/: admin_close_parcel_info.rs  admin_mint.rs  admin_purge.rs  admin_transfer_nft_collection_authority.rs  claim_land_buy_rewards.rs  claim_parcel.rs  create_block_map.rs  initialize.rs  mod.rs  update_config.rs  update_parcel_metadata.rs
programs/billion/src/state/: block_map.rs  grid_config.rs  mod.rs  parcel_info.rs
runbooks/deployment/: main.tx
scripts/: admin-claim-parcels-mainnet.ts  admin-claim-parcels.ts  deploy-bdbc-collection-mainnet.ts  init-devnet.ts  init-mainnet.ts  print-block-map.ts  print-grid-config-mainnet.ts  test-another-nft.ts  test-collection-mainnet.ts  undeploy-devnet.ts  update-collection-royalty.ts  update-price.ts
tests/: billion.ts
