[package]
name = "billion"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "billion"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token", "token_2022", "associated_token", "metadata"] }
mpl-core = { version = "0.7.2", features = ["anchor"] }
mpl-token-metadata = "4.1.2"
blake3 = "=1.6.1"
# Pin rmp/rmp-serde to avoid edition2024 requirement (needed by mpl-core)
rmp = "=0.8.14"
rmp-serde = "=1.3.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
